--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -1,6 +1,17 @@
-$default-font: "roboto-example", sans-serif
-$accent: orange
-$text: #333
+@mixin sans 
+	font-family: 'Source Sans Pro', sans-serif
+
+@mixin lato-bold 
+	font-family: 'Lato', sans-serif
+	font-weight: 700
+@mixin lato-black 
+	font-family: 'Lato', sans-serif
+	font-weight: 900
+	
+
+$accent: #00bc9c
+$dblue: #506a85
+$text: #73879c
 
 
 
