--- a/app/sass/_libs.sass
+++ b/app/sass/_libs.sass
@@ -1,3 +1,5 @@
-@import "../libs/normalize-css/normalize.css"
-// @import "../libs/bootstrap-4.1.3-dist/css/bootstrap.min.css"
+// @import "../libs/normalize-css/normalize.css"
+@import "../libs/bootstrap-4.1.3-dist/css/bootstrap.min.css"
+@import "../libs/slick/slick.css"
+@import "../libs/slick/slick-theme.css"
 
