--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,5 +1,4 @@
 @import "vars"
-@import "fonts"
 @import "libs"
 
 ::placeholder
@@ -14,7 +13,7 @@ body
 	min-width: 320px
 	position: relative
 	line-height: 1.65
-	font-family: $default-font
+	+sans
 	overflow-x: hidden
 	color: $text
 	input, textarea
@@ -37,6 +36,760 @@ body
 
 b, strong
 	font-weight: bold
+
+button:focus
+	outline: none
+
+p 
+	color: $text
+
+a
+	color: $dblue
+	&:hover
+		color: $accent
+		text-decoration: none
+
+h1, h2, h3, h4, h5, h6
+	+lato-bold
+	color: $dblue
+
+.section
+	padding: 100px 0 60px 0
+// ==============================Main styles==========================
+
+// =============================== HEADER ============================
+// ============ UPPANEL ================
+.uppanel
+	background-color: #f5f7fa
+	border-bottom: 1px solid #e6e9ed
+	z-index: -1
+	&__wrap
+		display: flex
+		justify-content: space-between
+		align-items: center
+		height: 40px
+	&__contacts
+		display: flex
+		&-mail 
+			margin-right: 25px
+			a
+				font-size: 12px
+				display: flex
+				align-items: center
+				i
+					font-size: 12px
+					margin-right: 10px
+					
+		&-phone
+			a
+				font-size: 12px
+				display: flex
+				align-items: center
+				i
+					font-size: 15px
+					margin-right: 10px
+
+				
+	&__media
+		display: flex
+		a
+			display: block
+			height: 40px
+			width: 30px
+			line-height: 40px
+			cursor: default
+			text-align: center
+			&:hover
+				color: #fff
+			&:nth-child(1):hover
+				background-color: #4668b3
+			&:nth-child(2):hover
+				background-color: #de5745
+			&:nth-child(3):hover
+				background-color: #2fbbed
+			&:nth-child(4):hover
+				background-color: #d94348
+			&:nth-child(5):hover
+				background-color: #3079ff
+			&:nth-child(6):hover
+				background-color: #eb6397
+			i
+				cursor: default
+				font-size: 15px
+
+// ============ NAVBAR ================
+.menubar
+	position: absolute
+	top: 40px
+	width: 100%
+	background-color: #fff
+	border-bottom: 1px solid #e6e9ed
+	z-index: 99
+	height: 112px
+
+
+	&__wrap
+		display: flex
+		position: relative
+		justify-content: space-between
+		align-items: center
+		height: 112px
+		transition: all 0.5s ease-out
+
+	&__logo
+		transition: all 0.2s ease
+		margin-right: 30px
+		img
+			transition: all 0.2s ease
+	&__menu 
+		display: flex
+		text-transform: uppercase
+		font-size: 15px
+		font-weight: 700
+		a
+			transition: all 0.2s ease
+			margin: 0 15px
+
+	&__search
+		margin-left: auto
+		&__input
+			border: none
+			width: 150px
+			color: $dblue
+			transition: all 0.2s ease
+			transform: scaleX(0)
+			transform-origin: 100% 0
+			&::placeholder
+				color: $dblue
+			
+		&__btn
+			border: none
+			background-color: transparent
+			color: $dblue
+			&:hover
+				color: $accent
+		&:hover
+			.menubar__search__input
+				transform: scaleX(1)
+
+.menubar_scroll
+	position: fixed
+	top: 0
+	height: 50px
+	width: 100%
+	box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.1)
+	>div
+		.menubar__wrap
+			height: 50px
+			.menubar__logo
+				img
+					width: 90px
+// ================ Mobile Menu ============================
+.mobile-btn
+	display: flex
+	flex-direction: column
+	align-items: center
+	justify-content: center
+	transform: translateY(-50%)
+	position: absolute
+	cursor: pointer
+	height: 30px
+	width: 30px
+	top: 50%
+	left: 0px
+	display: none
+	&:hover
+		span
+			background-color: $accent
+
+	span
+		display: block
+		transition: all 0.2s ease
+		width: 30px
+		height: 3px
+		margin: 3px 0
+		background-color: $dblue
+
+.mobile
+	position: fixed
+	display: flex
+	flex-direction: column
+	top: 0
+	left: 0
+	height: 100vh
+	width: 280px
+	background-color: #f5f7fa
+	box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.4)
+	z-index: 100
+	transform: translateX(-300px)
+	transition: all 0.3s ease-in-out
+	
+	&-active
+		transform: translateX(0px)
+	&__logo
+		padding: 10px 20px
+		img 
+			width: 90px
+	&__menu
+		display: flex
+		flex-direction: column
+		text-transform: uppercase
+		font-size: 15px
+		font-weight: 700
+		flex-grow: 1
+		a 
+			transition: all 0.2s ease
+			padding: 10px 20px
+
+			&:hover
+				background-color: darken(#f5f7fa, 2%)
+
+
+
+
+// ================ Mobile Menu ============================
+// =============================== HEADER ============================
+
+// =============================== Slider ============================
+
+
+.slider
+	margin-top: 112px
+
+	&__single
+		height: 95vh
+		background-color: $dblue
+		&__wrap
+			display: flex
+			height: 95vh
+			flex-direction: column
+			justify-content: center
+
+			.large-btn
+				align-self: center
+				border: none
+				height: 60px
+				width: 290px
+				margin-top: 60px
+				background-color: $accent
+				border-radius: 3px
+				color: #fff
+				font-size: 18px
+				font-weight: bold
+				text-transform: uppercase
+				box-shadow: inset 0px -2px 0px 0px rgba(0, 0, 0, 0.15)
+				transition: all 0.2s ease
+				&:hover
+					background-color: #17a78b
+
+			.s-header
+				display: flex
+				justify-content: center
+				margin-bottom: 20px
+				span
+					+lato-black
+					text-transform: uppercase
+					text-align: center
+					font-size: 78px
+					line-height: 88px
+					color: #fff
+					
+			p
+				color: #a3b1bf
+				font-size: 24px
+				line-height: 33px
+
+
+		&_1
+			background: url("../img/carusel-1-compressor.jpg") no-repeat center top / cover
+			>div .slider__single__wrap
+				p
+					align-self: center
+					text-align: center
+
+
+		&_2
+			background: url("../img/carusel-2-compressor.jpg") no-repeat center top / cover
+			>div .slider__single__wrap
+				.s-header
+					justify-content: end
+					span
+						text-align: right
+				p
+					color: #fff
+					max-width: 800px
+					align-self: end
+					text-align: right
+				.large-btn
+					align-self: end
+
+		&_3
+			background: url("../img/carusel-3-compressor.jpg") no-repeat center top / cover
+			>div .slider__single__wrap
+				.s-header
+					flex-direction: column
+					align-items: flex-start
+					span
+						background-color: $dblue
+						padding: 15px 80px 15px 40px
+
+					span:nth-child(2)
+						margin-top: 5px
+
+				p
+					color: $dblue
+					align-self: start
+					text-align: left
+					max-width: 700px
+				.large-btn
+					align-self: start
+		&_4
+			background: url("../img/carusel-4-compressor.jpg") no-repeat center top / cover
+			>div .slider__single__wrap
+				justify-content: start
+				.s-header
+					flex-direction: column
+					align-items: flex-end
+					margin-top: 100px
+					span
+						background-color: $dblue
+						padding: 15px 40px 15px 80px
+
+					span:nth-child(2)
+						margin-top: 5px
+
+				p
+					color: #fff
+					align-self: end
+					text-align: right
+					max-width: 700px
+				.large-btn
+					align-self: end
+
+		&_5
+			background: url("../img/carusel-5-compressor.jpg") no-repeat center top / cover
+			>div .slider__single__wrap
+				justify-content: start
+				.s-header
+					flex-direction: column
+					align-items: center
+					margin-top: 150px
+
+				p
+					align-self: center
+					text-align: center
+					max-width: 700px
+
+		
+//  Custom ARROWS
+.slick-arrow
+	z-index: 10
+	height: 60px
+	width: 60px
+	position: absolute
+	top: 50%
+	border: none
+	border-radius: 5px
+	background-color: $dblue
+	opacity: 0.2
+	transition: all 0.2s ease
+	.fas
+		font-size: 30px
+		color: #fff
+		opacity: 0.6
+		transition: all 0.2s ease
+		line-height: 40px
+
+	&:hover, &:focus
+		opacity: 1
+		.fas
+			color: $accent
+			opacity: 1
+
+.slick-next-custom
+	right: 30px
+	.fas
+		margin-left: 3px
+
+
+.slick-prev-custom
+	left: 30px
+	.fas
+		margin-right: 3px
+
+
+.slick-dots
+	display: inline-block
+	background-color: #fff
+	width: 145px
+	height: 40px
+	left: 50%
+	transform: translateX(-50%)
+	bottom: -20px
+	border-radius: 3px
+	transition: all 0.2s ease
+	li 
+		margin: 0 2px
+		button::before
+			font-size: 15px
+			color: $dblue
+			opacity: 1
+		button:hover::before
+			color: $accent
+
+.slick-dots li.slick-active button::before
+	color: $accent
+
+.slider
+  .slick-arrow, .slick-dots
+    display: none
+  &:hover
+    .slick-arrow, .slick-dots
+      display: block
+
+
+
+// =============================== Slider ============================
+// =============================== MAIN ============================
+
+.title
+	text-align: center
+	font-size: 44px
+	margin-bottom: 30px
+.subtitle
+	margin: auto
+	font-size: 22px
+	text-align: center
+	max-width: 800px
+	color: #73879c
+
+.quality
+	&__title
+		text-align: center
+		font-size: 44px
+		margin-bottom: 30px
+	&__subtitle
+		margin: auto
+		font-size: 22px
+		text-align: center
+		max-width: 800px
+		color: #73879c
+	&__items
+		margin-top: 30px
+	&__single
+		text-align: center
+	&__icon
+		font-size: 64px
+		color: $accent
+	&__single-title
+		font-size: 26px
+		margin: 15px 0
+	&__single-text
+		display: inline-block
+		text-align: center
+		max-width: 280px
+
+// ================WORKS SDCTION=====================
+
+.s-works
+	background-color: #f2f5f7
+	padding-bottom: 100px
+
+.works 
+	&__identity
+		padding: 70px 0
+		&__single
+			&_desc
+				background-color: #fff
+				padding: 30px 0
+				&-title
+					text-align: center
+					font-size: 20px
+					transition: all 0.2s ease
+				&-tag
+					display: block
+					text-align: center
+					font-size: 14px
+					color: #73879c
+			&-wrap
+				position: relative
+			&-img
+
+
+			&-hover
+				position: absolute
+				display: flex
+				top: 0
+				right: 0
+				bottom: 0
+				left: 0
+				justify-content: center
+				align-items: center
+				background-color: rgba($accent, 0)
+				transition: all 0.2s ease
+				span
+					position: absolute
+					display: none
+					width: 20px
+					height: 3px
+					background-color: #fff
+				span:last-child
+					transform: rotate(90deg)
+
+		&__single:hover
+			.works__identity__single-hover
+				background-color: rgba($accent, 0.9)
+				span
+					display: block
+
+			.works__identity__single_desc-title
+				color: $accent
+
+	&__carusel
+		&-item
+			position: relative
+			img
+				margin: 0	auto
+
+			&-hover
+				display: flex	
+				flex-direction: column	
+				align-items: center	
+				justify-content: center	
+				position: absolute
+				top: 0px
+				height: 185px
+				width: 270px
+				left: 50%
+				transform: translateX(-50%)
+				opacity: 0
+				background-color: rgba($accent, 0.9)
+				transition: all 0.2s ease
+				p
+					color: #fff	
+					margin: 0
+					+lato-bold
+				span
+					color: #fff	
+					font-size: 14px	
+			&:hover
+				.works__carusel-item-hover
+					opacity: 1
+		ul.slick-dots
+			bottom: -60px
+			background-color: transparent
+
+
+.works__carusel
+	.slick-custom2
+		z-index: -1
+	&:hover
+		.slick-custom2
+			z-index: 10
+
+
+.slick-custom2
+	height: 30px
+	width: 30px
+	top: 208px
+	.fas 
+		font-size: 18px
+		line-height: 28px
+
+.slick-next-custom2
+	right: 480px
+	.fas 
+		margin-left: 2px
+
+.slick-prev-custom2
+	left: 480px
+	.fas 
+		margin-right: 2px
+
+
+// ================ FOOTER =====================
+
+.footer
+	
+	&__up
+		padding: 70px 0	10px 0
+		background-color: #2f4052
+		&__block
+			margin-bottom: 60px
+			h6
+				color: #fff
+				text-transform: uppercase
+				letter-spacing: 2px
+				margin-bottom: 30px
+			p 
+				color: #a3b1bf
+				font-size: 14px
+				line-height: 22px
+
+			a
+				display: block
+				color: #a3b1bf
+				font-size: 15px
+				font-weight: 700
+				transition: all 0.2s ease
+
+				&:hover
+						color: $accent
+
+			&_about
+				img
+					margin: 0 0 20px 0
+				
+				a
+					.fa
+						font-size: 10px
+						margin-left: 10px
+				
+
+			&_works
+				&__thumbs
+					margin-top: 28px
+					max-width: 300px
+					a 
+						display: inline-block
+						position: relative
+						margin-bottom: 3px
+						&:hover
+							.footer__up__block_works__thumbs-hover
+								background-color: rgba($accent, 0.5)
+					&-hover
+						position: absolute
+						top: 0
+						right: 0
+						bottom: 0
+						left: 0
+						background-color: rgba($accent, 0)
+						transition: all 0.2s ease
+
+			&_contact
+				a 
+					i 
+						margin-right: 10px
+						font-size: 15px
+					.fa-map-marker-alt
+						margin-left: 2px
+					.fa-mobile-alt
+						margin-left: 3px	
+						
+.footer-subscribe	
+	background-color: #4e5c6c
+	display: flex
+	max-width: 300px
+	height: 40px
+	border-radius: 4px
+	align-items: center
+	justify-content: space-between
+	padding-right: 5px
+	&__input 
+		background-color: transparent
+		border: none
+		padding-left: 10px
+		min-width: 165px
+		color: #a3b1bf
+		&::placeholder
+			color: #a3b1bf
+			font-size: 14px
+
+	&__button	
+		height: 30px
+		border-radius: 4px
+		border: none
+		background-color: $accent
+		color: #fff
+		text-transform: uppercase
+		font-weight: 700
+		font-size: 12px
+		letter-spacing: 1px
+		cursor: pointer
+		box-shadow: inset 0px -2px 0px 0px rgba(0, 0, 0, 0.15)
+		transition: all 0.2s ease
+		&:hover
+			background-color: #17a78b
+
+
+.subscribe-success
+	display: none
+	color: $accent
+	font-weight: 700
+	padding-left: 10px
+	margin-top: 10px
+
+.subscribe-success.active
+	display: block
+
+
+.footer__down
+	background-color: #283645
+	&__wrap
+		display: flex
+		justify-content: space-between
+		padding: 30px 0 30px 0
+	&__rights
+		p
+			margin: 0
+			font-size: 14px
+			color: #707e8c
+
+	&__menu
+		a
+			transition: all 0.2s ease
+			font-size: 14px
+			transition: all 0.2s ease
+			margin-left: 15px
+			position: relative
+			color: #707e8c
+			&:hover
+				color: $accent
+			&::before
+				content: ''
+				display: block
+				background-color: #707e8c
+				position: absolute
+				height: 2px
+				width: 2px
+				top: 50%
+				left: -10px
+			&:first-child
+				margin-left: 0
+				&::before
+					display: none
+
+
+// --------------Всплывающая кнопка НАВЕРХ-----------------
+.button_top
+	position: fixed
+	bottom: 25px
+	right: 25px
+	opacity: 0
+	background-color: #3c5065
+	z-index: 12
+	border-radius: 4px
+	color: #949ba2
+	font-size: 18px
+	width: 40px
+	height: 40px
+	text-align: center
+	line-height: 40px
+	cursor: pointer
+	transition: all .3s ease
+	&.active
+		opacity: 0.8
+	&:hover
+		color: #fff
+		opacity: 1
+		background-color: $accent
+
+// --------------Всплывающая кнопка НАВЕРХ-----------------
+
+
+
+
+// ================FOOTER=====================
 
 
 
